@@ -1,3 +1,7 @@
+2008-11-14  Adam Schreiber  <sadam@clemson.edu>
+
+    * libseahorse/seahorse-util.c: Re-fix dialog.  Patch from Wouter Bolsterlee
+
 2008-11-11  Adam Schrieber  <sadam@clemson.edu>
 
     * src/eggtreemultidnd.c: Update from svn.  Fixes bug #560338
